# backend/src/app.js
@@ -6,8 +6,9 @@ import { validateAccessToken } from './middlewares/auth.js';
 import { loadAuthenticatedUser } from './middlewares/authenticated-user.js';
 import { createClient, listClients } from './controllers/client.js';
 import { validateClient } from './middlewares/validate-client.js';
-import { confirmQuote, createQuote, listQuotes, updateQuote, getPublicQuote } from './controllers/quote.js';
-import { validateQuote, validateQuoteIdParameter, validateQuoteUpdate } from './middlewares/validate-quote.js';
+import { confirmQuote, createQuote, listQuotes, updateQuote, getPublicQuote, respondToPublicQuote } from './controllers/quote.js';
+import { validateQuote, validateQuoteIdParameter, validateQuoteUpdate, validateQuoteResponse } from './middlewares/validate-quote.js';
+
 const app = express();
 
 app.use(
@@ -23,6 +24,7 @@ app.get('/health', (_request, response) => {
 });
 
 app.get('/api/v1/public/quotes/:publicToken', getPublicQuote);
+app.post('/api/v1/public/quotes/:publicToken/respond', validateQuoteResponse, respondToPublicQuote);
 app.get('/api/v1/me', validateAccessToken, loadAuthenticatedUser, getAuthenticatedUser);
 app.post('/api/v1/clients', validateAccessToken, loadAuthenticatedUser, validateClient, createClient);
 app.get('/api/v1/clients', validateAccessToken, loadAuthenticatedUser, listClients);
